<resources>
    <string name="app_name">Layam</string>
    <string name="app_title">Layam - Carnatic Metronome</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_reenter_password">Re-enter Password</string>
    <string name="sign_in">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="signup">Signup</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="action_logout">Logout</string>


    <string name="loginsuccesss">Login Successful!</string>
    <string name="loginerror">Login Failed. Try Again.</string>


    <string name="Aditala">AdiTala</string>
    <string name="Rupakatala">RupakaTala</string>
    <string name="Mishrachapu">MishraChapu</string>
    <string name="Khandachapu">KhandaChapu</string>
    <string name="TishraAdi">TishraAdi</string>

    <string name="AditalaMM">AdiTala Mohra-korvai</string>
    <string name="RupakatalaMM">RupakaTala Mohra-korvai</string>
    <string name="MishrachapuMM">MishraChapu Mohra-korvai</string>
    <string name="KhandachapuMM">KhandaChapu Mohra-korvai</string>

    <string name="no_tala_file">Oops! Sorry, no tala file for the selected combination!</string>
    <string name="no_shruti_file">Oops! Sorry, no shruti file for the selected combination!</string>
    <string name="bpm_70">70</string>
    <string name="bpm_80">80</string>
    <string name="bpm_90">90</string>
    <string name="bpm_100">100</string>
    <string name="bpm_110">110</string>
    <string name="bpm_120">120</string>
    <string name="shruthi_a">A</string>
    <string name="shruthi_as">AS</string>
    <string name="shruthi_b">B</string>
    <string name="shruthi_bs">B</string>
    <string name="shruthi_c">C</string>
    <string name="shruthi_cs">CS</string>
    <string name="shruthi_d">D</string>
    <string name="shruthi_ds">DS</string>
    <string name="shruthi_e">E</string>
    <string name="shruthi_es">E</string>
    <string name="shruthi_f">F</string>
    <string name="shruthi_fs">FS</string>
    <string name="shruthi_g">G</string>
    <string name="shruthi_gs">GS</string>
    <string name="kaala_v">V</string>
    <string name="kaala_m">M</string>


    <string name="use_case_title_static">Use case #1. Static responses</string>
    <string name="use_case_desc_static">Use static responses to test in-app billing</string>
    <string name="buy">Buy</string>
    <string name="use_case_title_banner">Use case #2. Ad banner</string>
    <string name="use_case_desc_banner">Show an ad banner. Remove it if user purchases an ad-free version</string>
    <string name="ad_banner_text">Checkout - the best in-app billing library</string>
    <string name="lorem_ipsum_long" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque mollis est nec venenatis tempus. In molestie rutrum nibh, ut commodo felis sodales et. Ut et aliquam augue. Ut molestie dignissim tempus. In pharetra tincidunt arcu in lacinia. Aliquam id eleifend velit. Donec tincidunt ipsum in enim eleifend dictum. Phasellus aliquam leo at metus blandit semper.  Duis feugiat mauris sit amet venenatis sagittis. Cras consequat, orci vitae lobortis dignissim, augue urna faucibus ex, id sollicitudin lacus diam ac justo. Pellentesque finibus, nisl non porttitor interdum, elit enim condimentum erat, id aliquet nibh ante quis libero. Vestibulum risus odio, elementum ac lorem imperdiet, tristique aliquam sapien. Nunc sed justo vel augue faucibus consectetur. Mauris scelerisque urna tempus dui fermentum fermentum. Mauris et hendrerit augue. Maecenas lobortis dictum ipsum, eu condimentum enim pretium aliquam. Nullam sed nulla feugiat, fringilla sapien et, cursus libero. Mauris mauris dolor, luctus sit amet lacus eget, suscipit dictum nisl. Proin id ipsum at tortor tincidunt cursus quis sit amet augue.  Morbi eleifend sapien at suscipit viverra. Nulla interdum libero quis erat malesuada vestibulum. Aenean congue nisl sit amet erat condimentum vehicula. Aliquam id lacus odio. Nam a nisi eu ligula luctus dapibus in in eros. Pellentesque nec consectetur tortor. Pellentesque porttitor ultrices nisl in scelerisque. Pellentesque tincidunt, dui vel pellentesque convallis, nunc arcu vehicula nisi, at malesuada nunc tellus sed lacus.</string>
    <string name="remove_ad_banner">Remove ad banner</string>
    <string name="use_case_title_skus">Use case #3. List of SKUs</string>
    <string name="use_case_desc_skus">Show a list of SKUs available for purchase. Click an item to purchase or consume it</string>
    <string name="icon">icon</string>
    <string name="use_case_title_subscriptions">Use case #4. Subscriptions</string>
    <string name="use_case_desc_subscriptions">Show a list of subscriptions. Allow buying a subscription and changing it</string>
    <string name="change">Change</string>
    <string name="_1_buy">1. Buy</string>
    <string name="_2_select">2. Select</string>
    <string name="_3_change">3. Change</string>
</resources>
